# decision-agent-bench

./: .dockerignore  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  task-proposal.yml
.github/workflows/: ci.yml  release.yml  security.yml
articles/: 01-task-success-hides-catastrophic-failures.md  02-measuring-recovery-after-tool-errors.md  03-business-regret-and-judge-disagreement.md
configs/experiments/: smoke.json  v0.1.template.json  v0.2-research-smoke.json  v0.2.template.json  v0.3-smoke.json  v0.3.template.json
data/: reference-world-manifest.json
data/task_specs/: v0.1.json  v0.2-instances.json  v0.3-workflows.json
docs/: annotation-protocol.md  benchmark-protocol.md  data-card.md  experiment-guide.md  external-reproduction.md  failure-taxonomy.md  horizon-methodology.md  inspect-evals-registration.md  leaderboard-governance.md  release-artifacts.md  release-checklist.md  research-baselines.md  research-design.md  roadmap.md  security-model.md  statistical-analysis.md  task-catalog.md  v0.2-expansion.md  v0.3-stateful-workflows.md
docs/assets/: README.md
report/: technical-report.md
results/published/: README.md
security/: openvex.json
src/decision_agent_bench/: __init__.py  __main__.py  audit.py  cli.py  demo.py  inspect_registry.py  integrity.py  release.py  specs.py
src/decision_agent_bench/evals/: __init__.py  advanced_baselines.py  baselines.py  cases.py  instances.py  runtime.py  scorer.py  task.py  tools.py
src/decision_agent_bench/experiments/: __init__.py  analysis.py  manifest.py  planning.py  runner.py  schema.py
src/decision_agent_bench/research/: __init__.py  annotation.py
src/decision_agent_bench/simulator/: __init__.py  environment.py  generator.py  oracle.py  reference.py  schema.py  validation.py  workflow.py
talk/: decision-agent-bench-research-talk.pptx
tests/: test_annotation.py  test_audit.py  test_demo.py  test_evals.py  test_experiments.py  test_inspect_registry.py  test_integrity.py  test_release.py  test_simulator.py  test_specs.py  test_workflow.py
