[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "decision-agent-bench"
version = "0.2.0"
description = "A benchmark for reliable long-horizon business decision agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "inspect-ai>=0.3.247,<0.4",
]
license = { file = "LICENSE" }
authors = [{ name = "DecisionAgentBench contributors" }]
keywords = ["ai-agents", "benchmark", "evaluation", "inspect-ai", "reliability"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]

[project.urls]
Documentation = "https://github.com/alibakh62/decision-agent-bench/tree/main/docs"
Issues = "https://github.com/alibakh62/decision-agent-bench/issues"
Repository = "https://github.com/alibakh62/decision-agent-bench"

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "ruff==0.15.22",
]
demo = [
  "gradio>=6,<7",
]

[project.scripts]
decision-agent-bench = "decision_agent_bench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/decision_agent_bench"]

[tool.hatch.build.targets.wheel.force-include]
"data/task_specs/v0.1.json" = "decision_agent_bench/data/v0.1.json"
"data/reference-world-manifest.json" = "decision_agent_bench/data/reference-world-manifest.json"
"data/task_specs/v0.2-instances.json" = "decision_agent_bench/data/v0.2-instances.json"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/decision_agent_bench/evals/cases.py" = ["E501"]
